@@ -268,6 +268,18 @@
 </tr>
 </table>
 
+<h4>Change operationId naming schema to include url path</h4>
+<table class="tchange">
+<tr class="trchange">
+	<td class="tdfield">modified fields</td>
+	<td class="tdchange" colspan=2>
+		<ul>
+			<li>.paths[][].operationId</li>
+		</ul>
+	</td>
+</tr>
+</table>
+
 <h3>openapi/v0.0.38 (src/plugins/openapi/v0.0.38/openapi.json)</h3>
 
 <h4>add plugin</h4>
